# AutocheckTool

./: .gitignore  Config.py  LICENSE  README  README.md  ack.py  config.toml  m_nlp.py  pyproject.toml  requirements.txt  stu.py  temp.py  test.py  xlsx.py
utils/: config.py  util.py  xlsx.py
